@@ -38,6 +38,16 @@ public final class Raven {
      * @param ctx Android application ctx
      */
     public static void init(Context ctx) {
+        init(ctx, getDefaultRavenFactory(ctx));
+    }
+
+    /**
+     * Initialize Raven using a DSN set in the AndroidManifest.
+     *
+     * @param ctx Android application ctx
+     * @param ravenFactory the RavenFactory to be used to generate the Raven instance
+     */
+    public static void init(Context ctx, AndroidRavenFactory ravenFactory) {
         ctx = ctx.getApplicationContext();
         String dsn = "";
 
@@ -56,7 +66,7 @@ public final class Raven {
                 + "the constructor or AndroidManifest.");
         }
 
-        init(ctx, new Dsn(dsn));
+        init(ctx, dsn, ravenFactory);
     }
 
     /**
@@ -66,7 +76,28 @@ public final class Raven {
      * @param dsn Sentry DSN string
      */
     public static void init(Context ctx, String dsn) {
-        init(ctx, new Dsn(dsn));
+        init(ctx, new Dsn(dsn), getDefaultRavenFactory(ctx));
+    }
+
+    /**
+     * Initialize Raven using a string DSN.
+     *
+     * @param ctx Android application ctx
+     * @param dsn Sentry DSN string
+     * @param ravenFactory the RavenFactory to be used to generate the Raven instance
+     */
+    public static void init(Context ctx, String dsn, AndroidRavenFactory ravenFactory) {
+        init(ctx, new Dsn(dsn), ravenFactory);
+    }
+
+    /**
+     * Initialize Raven using a DSN object.
+     *
+     * @param ctx Android application ctx
+     * @param dsn Sentry DSN object
+     */
+    public static void init(Context ctx, Dsn dsn) {
+        init(ctx, dsn, getDefaultRavenFactory(ctx));
     }
 
     /**
@@ -75,8 +106,9 @@ public final class Raven {
      *
      * @param ctx Android application ctx
      * @param dsn Sentry DSN object
+     * @param ravenFactory the RavenFactory to be used to generate the Raven instance
      */
-    public static void init(Context ctx, Dsn dsn) {
+    public static void init(Context ctx, Dsn dsn, AndroidRavenFactory ravenFactory) {
         if (raven != null) {
             Log.e(TAG, "Initializing Raven multiple times.");
             // cleanup existing connections
@@ -104,10 +136,14 @@ public final class Raven {
                 + DefaultRavenFactory.ASYNC_OPTION + "=false' from your DSN.");
         }
 
-        RavenFactory.registerFactory(new AndroidRavenFactory(ctx));
+        RavenFactory.registerFactory(ravenFactory);
         raven = RavenFactory.ravenInstance(dsn);
 
         setupUncaughtExceptionHandler();
+    }
+
+    private static AndroidRavenFactory getDefaultRavenFactory(Context ctx) {
+        return new AndroidRavenFactory(ctx);
     }
 
     /**
