@@ -3,6 +3,7 @@ Version 7.8.1
 
 - Make Breadcrumbs serializable.
 - Don't log errors in RavenServletRequestListener if Raven hasn't been initialized.
+- Allow use of custom AndroidRavenFactory. (thanks kassim)
 
 Version 7.8.0
 -------------
